--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,9 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
-
-#
-# OS Specific
-#
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-#
-# IDE Specific
-#
-nbproject
-.~lock.*
-.buildpath
-.idea
-.project
-.settings
-.vscode
-composer.lock
-*.sublime-workspace
-*.swp
-*.swo
-
-#
-# Project specific
-#
-
-# dependencies, build, log, etc
-node_modules
-dist
-*.log
-
 # package directories
+node_modules
+
+# packaging directories
 .serverless
+dist
+
+yarn-error.log
+
