--- a/package.json
+++ b/package.json
@@ -5,9 +5,20 @@
   "license": "MIT",
   "author": "Roland Olah",
   "scripts": {
-    "invoke": "serverless invoke local -f myHandler"
+    "invoke": "serverless invoke local -f myHandler",
+    "build": "serverless webpack",
+    "lint": "eslint --ignore-path .gitignore ."
   },
   "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-module-resolver": "^3.2.0",
+    "babel-plugin-source-map-support": "^2.1.1",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-plugin-import": "^2.18.2",
+    "serverless": "^1.48.4",
     "serverless-offline": "^5.5.0",
     "serverless-webpack": "^5.3.1",
     "webpack": "^4.35.0",
