--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
   "engines": {
     "node": ">= 10.x",
     "yarn": ">= 1.x"
+  },
+  "dependencies": {
+    "source-map-support": "^0.5.13"
   }
 }
